--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -231,9 +231,8 @@
   }
   
   @book{Friedrich2008,
+    author={Friedrich,Jan  and Hammerschall,Ulrike  and Kuhrmann, Marco  and Sihling, Marc},
   title={Das V-Modell XT},
-  author={Friedrich,Jan  and Hammerschall,Ulrike  and Kuhrmann, Marco  and Sihling, Marc},
-  series={Informatik im Fokus},
   year={2008},
   tags= {Pattern; Software Engineering},
   publisher={Springer},
@@ -241,34 +240,33 @@
 }
 
 @inproceedings{Kuhrmann2011,
-  	  booktitle = {EuroSPI},
 	  author = {Kuhrmann, Marco and Lange, Christian and Schnackenburg, André},
+  	  booktitle = {EuroSPI},
 	  editor = {O'Connor, Rory and Pries-Heje, Jan and Messnarz, Richard},
- 	 pages = {49-60},
-	 year={2011},
-	tags= {Pattern; Software Engineering},
-  	publisher = {Springer},
-	address={Heidelberg}
+ 	  pages = {49-60},
+	  year={2011},
+	  tags= {Pattern; Software Engineering},
+  	  publisher = {Springer},
+	  address={Heidelberg}
 	  }
 	  
  @book{Zoerner2012,
+   author={Zörner, Stefan},
   title={Software-Architekturen Dokumentieren und Kommunizieren},
-  author={Stefan Zörner},
   year={2012},
   tags= {Pattern; Software Engineering},
-   booktitle = {EuroSPI},
   publisher={Carl Hanser Verlag},
   adress={München}
 }
 
 
 @proceedings{Wang2007,
+ editor    = {Wang, Qing and
+               Pfahl, Dietmar and
+               Raffo, David M. },
   title     = {Software Process Dynamics and Agility, International Conference
                on Software Process, ICSP 2007, Minneapolis, MN, USA, May
                19-20, 2007, Proceedings},
- editor    = {Qing Wang and
-               Dietmar Pfahl and
-               David M. Raffo},
   series    = {Lecture Notes in Computer Science},
   volume    = {4470},
   year      = {2007},
@@ -279,18 +277,20 @@
 }
 
 @article{hauber2010,
-  title={Architekturprozesse--Systeme systematisch entwickeln},
   author={Hauber, Rudolf and Muth, Bertil},
+  title={Architekturprozesse--Systeme systematisch entwickeln},
   journal={URL: www. sigs-datacom. de (Zugriffsdatum: 22. 03. 2013)},
-  year={2010}
+  year={2010},
+    tags= {Pattern; Software Engineering}
 }
 
 @article{gau2006,
-  title={UMA und EPF: Einf{\"u}hrung und Anwendung in der Praxis},
-  author={Gau, Thosten},
-  journal={Objekt Spektrum,(November/Dezember 2006-6)},
-  pages={42--47},
-  year={2006}
+ 	 title={UMA und EPF: Einf{\"u}hrung und Anwendung in der Praxis},
+  	author={Gau, Thosten},
+ 	 journal={Objekt Spektrum,(November/Dezember 2006-6)},
+	 tags= {Pattern; Software Engineering},
+  	pages={42--47},
+	year={2006}
 }
 
 @misc{openup, 
@@ -299,21 +299,23 @@
     title = "Open Unified Process (OpenUP)", 
     month="April",
     year = "2014", 
-    url = "http://www.itpractices.org/Live/framework/openup",}
+      tags= {Pattern; Software Engineering},
+    url = "http://www.itpractices.org/Live/framework/openup"}
     
   }
   
   @article{freudenreichevaluierung,
+    author={Freudenreich, Robert},
   title={Evaluierung der Potentiale des Eclipse Process Frameworks},
-  author={Freudenreich, Robert},
   journal={Modellbasierte Softwareentwicklung},
+   tags= {Pattern; Software Engineering},
   pages={34}
 }
 
 @misc{eclipseopenup, 
-    author = "{Ricardo Balduino}", 
-    publisher = "Eclipse", 
+    author = "{Balduino, Ricardo }", 
     title = "Introduction to OpenUP (Open Unified Process) ", 
+    publisher = "Eclipse", 
     month="August",
     year = "2007", 
     url = "http://www.eclipse.org/epf/general/OpenUP.pdf",}
@@ -329,47 +331,47 @@
 }
 
 @book{Basem2010,
- title={Software Design For Six Sigma: A Roadmap For Excellence},
  author={El-Haik, Basem  and Shaout, Adnan },
+ title={Software Design For Six Sigma: A Roadmap For Excellence},
  year={2010},
  publisher={Wiley},
  address={Hoboken, N.J.}
 }
 
 @book{ambler2012,
-  title={Disciplined Agile Delivery: A Practitioner's Guide to Agile Software Delivery in the Enterprise},
   author={Ambler, S.W. and Lines, M.},
-  series={IBM Press},
+  title={Disciplined Agile Delivery: A Practitioner's Guide to Agile Software Delivery in the Enterprise},
   year={2012},
   publisher={Pearson Education}
 }
 
 @techreport{2004vmodell,
   author = {Beratungsstelle der Bundesregierung für Informationstechnik in der Bundesverwaltung},
+    title = {V-Modell XT},
   editor = {Deutschland, Bundesrepublik},
   timestamp = {2010-04-21T10:53:42.000+0200},
-  title = {V-Modell XT},
   url = {http://ftp.uni-kl.de/pub/v-modell-xt/Release-1.2/Dokumentation/pdf/V-Modell-XT-Teil1.pdf},
   year = 2004
 }
 
 @book{reinhard2008,
+  author={H{\"o}hn, Reinhard  and Rausch, A.  and Broy, M.  and  H{\"o}ppner, Stephan and Bergner, K.  and Petrasch, R. and Biffl, S. and Wagner, R. and Hesse, W.},
   title={Das V-Modell XT: Grundlagen, Methodik und Anwendungen},
-  author={Reinhard H{\"o}hn and A. Rausch and M. Broy and Stephan H{\"o}ppner and K. Bergner and Petrasch, R. and Biffl, S. and Wagner, R. and Hesse, W.},
   year={2008},
-  publisher={Springer}
+  publisher={Springer},
+  address={Heidelberg}
 }
 
 @book{brack2010,
-  title={Das V-Modell XT 1.2.1 im Umfeld der Qualit{\"a}tssicherung nach ISO 9001:2000},
   author={Brack, T.},
+  title={Das V-Modell XT 1.2.1 im Umfeld der Qualit{\"a}tssicherung nach ISO 9001:2000},
   year={2010},
   publisher={Diplom.de}
 }
 
 @book{ruf2008,
-  title={Ganzheitliches IT-Projektmanagement: Wissen, Praxis, Anwendungen},
   author={Ruf, W. and Fittkau, T.},
+  title={Ganzheitliches IT-Projektmanagement: Wissen, Praxis, Anwendungen},
   year={2008},
   publisher={Oldenbourg}
 }
@@ -377,52 +379,52 @@
 @book {Reichert2011,
 author = {Kaiser, Stefanie and Reichert, Manfred},
 title = {Datenflussvarianten in Prozessmodellen: Szenarien, Herausforderungen, Ansätze},
-address = {Ulm},
 year = {2011},
-publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Informatik}
+publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Informatik},
+address = {Ulm}
 }
 
 @inproceedings{kaschek1998,
-  title={Proze{\ss}ontologie als Faktor der Gesch{\"a}ftsproze{\ss}modellierung.},
   author={Kaschek, Roland},
+  title={Proze{\ss}ontologie als Faktor der Gesch{\"a}ftsproze{\ss}modellierung.},
   booktitle={Modellierung},
   year={1998}
 }
 
 @article{journals95,
   author = {Becker, Jörg and Rosemann, Michael and Schütte, Reinhard},
+    title = {Grundsätze ordnungsmäßiger Modellierung.},
    journal = {Wirtschaftsinformatik},
   number = 5,
   pages = {435--445},
-  title = {Grundsätze ordnungsmäßiger Modellierung.},
   volume = 37,
   year = 1995
 }
 
 @book{freund2007,
-  title={Software Engineering durch Modellierung wissensintensiver Entwicklungsprozesse},
   author={Freund, T.},
+  title={Software Engineering durch Modellierung wissensintensiver Entwicklungsprozesse},
   year={2007},
   publisher={GITO}
 }
 
 @book{reinshagen2009,
-  title={Konzepte einer komprimierten Informationsversorgung f{\"u}r die interne F{\"u}hrung und externe Performance-Kommunikation grosser Publikumsgesellschaften},
   author={Reinshagen, F.},
+  title={Konzepte einer komprimierten Informationsversorgung f{\"u}r die interne F{\"u}hrung und externe Performance-Kommunikation grosser Publikumsgesellschaften},
   year={2009},
   publisher={Logos-Verlag}
 }
 
 @book{leimeister2012,
-  title={Dienstleistungsengineering und -management},
   author={Leimeister, J.M.},
+  title={Dienstleistungsengineering und -management},
   year={2012},
   publisher={Springer Berlin Heidelberg}
 }
 
 @inproceedings{pichler2012,
+ author={Pichler, Paul and Weber, Barbara and Zugal, Stefan and Pinggera, Jakob and Mendling, Jan and Reijers, Hajo A},
   title={Imperative versus declarative process modeling languages: An empirical investigation},
-  author={Pichler, Paul and Weber, Barbara and Zugal, Stefan and Pinggera, Jakob and Mendling, Jan and Reijers, Hajo A},
   booktitle={Business Process Management Workshops},
   pages={383--394},
   year={2012},
@@ -430,15 +432,15 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 }
 
 @book{lichtenegger2012,
-  title={Methoden zur teilautomatischen Konstruktion von Ist-Prozessmodellen mittels Process Mining sowie zur Integration manuell konstruierter und automatisch generierter Ist-Prozessmodelle},
   author={Lichtenegger, W.},
+  title={Methoden zur teilautomatischen Konstruktion von Ist-Prozessmodellen mittels Process Mining sowie zur Integration manuell konstruierter und automatisch generierter Ist-Prozessmodelle},
   year={2012},
   publisher={Logos Verlag Berlin}
 }
 
 @incollection{fahland2009,
-  title={Declarative versus imperative process modeling languages: The issue of understandability},
   author={Fahland, Dirk and L{\"u}bke, Daniel and Mendling, Jan and Reijers, Hajo and Weber, Barbara and Weidlich, Matthias and Zugal, Stefan},
+  title={Declarative versus imperative process modeling languages: The issue of understandability},
   booktitle={Enterprise, Business-Process and Information Systems Modeling},
   pages={353--366},
   year={2009},
@@ -446,58 +448,58 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 }
 
 @book{heinrich2007,
-  title={Allgemeine Systemanalyse},
   author={Heinrich, G.},
+  title={Allgemeine Systemanalyse},
   year={2007},
   publisher={Oldenbourg}
 }
 
 @book{thomas2009,
-  title={Fuzzy Process Engineering },
   author={Thomas, Oliver},
+  title={Fuzzy Process Engineering },
   year={2009},
   publisher={Gabler Verlag}
 }
 
 @book{kircher2006,
-  title={IT: Technologien, L{\"o}sungen, Innovationen},
   author={Kircher, H.},
+  title={IT: Technologien, L{\"o}sungen, Innovationen},
   year={2006},
   publisher={Springer}
 }
 
 @book{gpfert2012,
-  title={Gesch{\"a}ftsprozessmodellierung mit BPMN 2.0: Business Process Model and Notation},
   author={G{\"o}pfert, J. and Lindenbach, H.},
+  title={Gesch{\"a}ftsprozessmodellierung mit BPMN 2.0: Business Process Model and Notation},
   year={2012},
   publisher={Oldenbourg Wissenschaftsverlag}
 }
 
 @book{pitschke2010,
-  title={Unternehmensmodellierung f{\"u}r die Praxis: Eine Einf{\"u}hrung in die Darstellung von Unternehmensmodellen},
   author={Pitschke, J.},
+  title={Unternehmensmodellierung f{\"u}r die Praxis: Eine Einf{\"u}hrung in die Darstellung von Unternehmensmodellen},
   year={2010},
   publisher={Books on Demand}
 }
 
 @book{allweyer2013,
-  title={BPMN 2.0 - Business Process Model and Notation: Einf{\"u}hrung in den Standard f{\"u}r die Gesch{\"a}ftsprozessmodellierung},
   author={Allweyer, T.},
+  title={BPMN 2.0 - Business Process Model and Notation: Einf{\"u}hrung in den Standard f{\"u}r die Gesch{\"a}ftsprozessmodellierung},
   year={2013},
   publisher={Books on Demand}
 }
 
 
 @book{krallmann2013,
-  title={Systemanalyse im Unternehmen: Prozessorientierte Methoden der Wirtschaftsinformatik},
   author={Krallmann, H. and Bobrik, A. and Levina, O.},
+  title={Systemanalyse im Unternehmen: Prozessorientierte Methoden der Wirtschaftsinformatik},
   year={2013},
   publisher={Oldenbourg Wissenschaftsverlag}
 }
 
 @article{white2004,
-  title={Introduction to BPMN},
   author={White, Stephen A},
+  title={Introduction to BPMN},
   journal={IBM Cooperation},
   volume={2},
   year={2004}
@@ -505,8 +507,8 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 
 @misc{bpmnposter, 
     author = "{Mountain Goat Software}", 
-    publisher = "Mountain Goat Software", 
     title = "BPMN Offensive Berlin", 
+    publisher = "Mountain Goat Software", 
     month="April",
     year = "2014", 
     url = "http://www.bpmb.de/index.php/BPMNPoster",}
@@ -514,8 +516,8 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
   }
   
   @book{reichert2012,
+    author={Reichert, Manfred  and Weber, Barbara},
   title={Enabling Flexibility in Process-Aware Information Systems: Challenges, Methods, Technologies},
-  author={Manfred Reichert and Barbara Weber},
   year={2012},
   publisher={Springer}
 }
@@ -523,8 +525,8 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 
 
 @inproceedings{pesic2007declare,
-  title={Declare: Full support for loosely-structured processes},
   author={Pesic, Maja and Schonenberg, Helen and van der Aalst, Wil MP},
+  title={Declare: Full support for loosely-structured processes},
   booktitle={Enterprise Distributed Object Computing Conference, 2007. EDOC 2007. 11th IEEE International},
   pages={287--287},
   year={2007},
@@ -532,8 +534,8 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 }
 
 @inproceedings{fahland2010,
-  title={Declarative versus imperative process modeling languages: the issue of maintainability},
   author={Fahland, Dirk and Mendling, Jan and Reijers, Hajo A and Weber, Barbara and Weidlich, Matthias and Zugal, Stefan},
+  title={Declarative versus imperative process modeling languages: the issue of maintainability},
   booktitle={Business Process Management Workshops},
   pages={477--488},
   year={2010},
@@ -541,8 +543,8 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 }
 
 @inproceedings{pesic2006,
-  title={A declarative approach for flexible business processes management},
   author={Pesic, Maja and van der Aalst, Wil MP},
+  title={A declarative approach for flexible business processes management},
   booktitle={Business Process Management Workshops},
   pages={169--180},
   year={2006},
@@ -550,30 +552,30 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 }
 
 @book{montali2010,
-  title={Specification and verification of declarative open interaction models: A logic-based approach},
   author={Montali, Marco},
+  title={Specification and verification of declarative open interaction models: A logic-based approach},
   volume={56},
   year={2010},
   publisher={Springer}
 }
 
 @incollection{Pesic200,
-year={2006},
+author={Aalst, W.M.P. and Pesic, M.},
 booktitle={Web Services and Formal Methods},
 series={Lecture Notes in Computer Science},
 editor={Bravetti, Mario and Núñez, Manuel and Zavattaro, Gianluigi},
 title={DecSerFlow: Towards a Truly Declarative Service Flow Language},
+year={2006},
 publisher={Springer Berlin Heidelberg},
-author={Aalst, W.M.P. and Pesic, M.},
 pages={1-23}
 }
 
 @article{quteprints,
+      author = {Mendling, Jan  and Recker, Jan C.  and Wolf, Johannes },
+           title = {Collaboration features in current BPM tools},
           volume = {32},
           number = {1},
            month = {January},
-          author = {Jan Mendling and Jan C. Recker and Johannes Wolf},
-           title = {Collaboration features in current BPM tools},
        publisher = {Gesellschaft f{\''u}r Informatik e.V.},
             year = {2012},
          journal = {EMISA Forum},
@@ -581,27 +583,22 @@ pages={1-23}
 }
 
 @book{becker2012prozessmanagement,
+ author={Becker, J.},
   title={Prozessmanagement: Ein Leitfaden Zur Prozessorientierten Organisationsgestaltung},
-  author={Becker, J.},
-  isbn={9783642338441},
-  url={http://books.google.de/books?id=nnVDSYneBeQC},
   year={2012},
   publisher={Springer Berlin Heidelberg}
 }
 
 @book{gadatsch2012,
+ author={Gadatsch, A.},
   title={Grundkurs Gesch{\"a}ftsprozess-Management},
-  author={Gadatsch, A.},
-  isbn={9783834824288},
-  series={Online Plus},
-  url={http://books.google.de/books?id=PwDuJYFNCAMC},
   year={2012},
   publisher={Vieweg+Teubner Verlag}
 }
 
 @inproceedings{list2006evaluation,
-  title={An evaluation of conceptual business process modelling languages},
   author={List, Beate and Korherr, Birgit},
+  title={An evaluation of conceptual business process modelling languages},
   booktitle={Proceedings of the 2006 ACM symposium on Applied computing},
   pages={1532--1539},
   year={2006},
@@ -619,15 +616,14 @@ pages={1-23}
   }
   
   @inproceedings{bpm07,
-  added-at = {2012-11-22T19:17:38.000+0100},
   author = {Mendling, J. and Reijers, H.A. and Cardoso, J.},
-  biburl = {http://www.bibsonomy.org/bibtex/22d1c68cd03dc092ede3cfb13e70ae182/wvdaalst},
+    title = {What Makes Process Models Understandable?},
   booktitle = {International Conference on Business Process Management (BPM 2007)},
   editor = {Alonso, G. and Dadam, P. and Rosemann, M.},
    pages = {48--63},
   publisher = {Springer-Verlag, Berlin},
-  series = {Lecture Notes in Computer Science},
-  title = {What Makes Process Models Understandable?}}
+  series = {Lecture Notes in Computer Science}
+  }
 
 
 
@@ -635,23 +631,22 @@ pages={1-23}
 
 
 @article{sabrina942,
-           month = {June},
-           title = {Investigating expressiveness and understandability of hierarchy in declarative business process models},
-          author = {Stefan Zugal and Pnina Soffer and Cornelia Haisjackl and Jakob Pinggera and Manfred Reichert and Barbara Weber},
+          author = {Zugal,Stefan and Soffer, Pnina and Haisjackl, Cornelia and Pinggera, Jakob  and 				Reichert, Manfred and Weber, Barbara},
+           title = {Investigating expressiveness and understandability of hierarchy in declarative business 		process models},
             year = {2013},
-         journal = {Software \& Systems Modeling}}
+           journal = {Software \& Systems Modeling}}
 
 @Masterthesis{Menhorn2014,
 type={Bachelorarbeit},
-author={Nicole Menhhorn},
+author={Menhorn, Nicole},
 title={Analyse und Überführung von Softwareentwicklungsprozessen in die standardisierte BPMN Notation},
 year={2014},
 school={Universität Ulm}}
 
 
 @phdthesis{brunner2007fallstudie,
-  title={Fallstudie zur Modellierung von Software-Entwicklungsprozessen auf Basis des Software Process Engineering Metamodel 2.0},
   author={Brunner, Maximilian},
+  title={Fallstudie zur Modellierung von Software-Entwicklungsprozessen auf Basis des Software Process Engineering Metamodel 2.0},
   year={2007},
   school={Diplomarbeit, Lehrstuhl f{\"u}r Informatik 2, FAU}
 }
@@ -665,24 +660,24 @@ YEAR = {2013}
 }
 
 @misc{Bregenzer2014,
-title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
 author={Bregenzer, Stefan},
+title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
 url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strategisches- prozessmodell-in-bpmn/},
 month={august},
 year={2014}}
 
 
 @phdthesis{thesis_maja,
+  author = {Pesic, M.},
   type = {PhD Thesis},
   title = {{Constraint-based Workflow Management Systems: Shifting Control to Users}},
-  author = {Pesic, M.},
   school = {Eindhoven University of Technology},
   year = 2008
 }
 
 @inproceedings{gruhn2006complexity,
-  title={Complexity metrics for business process models},
   author={Gruhn, Volker and Laue, Ralf},
+  title={Complexity metrics for business process models},
   booktitle={9th international conference on business information systems (BIS 2006)},
   volume={85},
   pages={1--12},
@@ -690,8 +685,8 @@ year={2014}}
 }
 
 @article{haisjackl2014understanding,
-  title={Understanding Declare models: strategies, pitfalls, empirical results},
   author={Haisjackl, Cornelia and Barba, Irene and Zugal, Stefan and Soffer, Pnina and Hadar, Irit and Reichert, Manfred and Pinggera, Jakob and Weber, Barbara},
+  title={Understanding Declare models: strategies, pitfalls, empirical results},
   journal={Software \& Systems Modeling},
   pages={1--28},
   year={2014},
@@ -699,8 +694,8 @@ year={2014}}
 }
 
 @article{reijers2011study,
-  title={A study into the factors that influence the understandability of business process models},
   author={Reijers, Hajo A and Mendling, Jan},
+  title={A study into the factors that influence the understandability of business process models},
   journal={Systems, Man and Cybernetics, Part A: Systems and Humans, IEEE Transactions on},
   volume={41},
   number={3},
@@ -710,15 +705,15 @@ year={2014}}
 }
 
 @article{recker2007does,
-  title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
   author={Recker, Jan C and Dreiling, Alexander},
+  title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
   year={2007},
   publisher={University of Southern Queensland}
 }
 
 @inproceedings{gruhn2006adopting,
-  title={Adopting the cognitive complexity measure for business process models},
   author={Gruhn, Volker and Laue, Ralf},
+  title={Adopting the cognitive complexity measure for business process models},
   booktitle={Cognitive Informatics, 2006. ICCI 2006. 5th IEEE International Conference on},
   volume={1},
   pages={236--241},
